--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.rtl.css
@@ -691,7 +691,7 @@ md-menu-item.blue svg {
   background: #212325;
   margin: 10px 0;
 }
-.copy-left {
+.copy-right {
   max-width: 500px;
 }
 .tooltip {
